# controllers/reservationController.js
@@ -5,9 +5,8 @@ const User = require("../models/userModel")
 
 module.exports = {
 
-    list: async(req, res)=>{
-
-         /*
+    list: async (req, res) => {
+      /*
             #swagger.tags = ['Reservations']
             #swagger.summary = "List Reservations"
             #swagger.description = `
@@ -19,18 +18,16 @@ module.exports = {
                 </ul>
             `
         */
-
-        const data = await res.getModelList(Reservation, {},  "branchId")
-        res.status(200).send({
-            error:false,
-            details:await res.getModelListDetails(Reservation),
-            data
-        })
+            const data = await res.getModelList(Reservation, {},  "branchId")
+            res.status(200).send({
+                error:false,
+                details:await res.getModelListDetails(Reservation),
+                data
+            })
     },
-    create: async(req, res)=>{
 
-          
-            // #swagger.tags = ["Reservations"]
+    create: async (req, res) => {
+         // #swagger.tags = ["Reservations"]
             // #swagger.summary = "Create Reservations"
             // #swagger.parameters['body'] = {
             //     in: 'body',
@@ -39,36 +36,36 @@ module.exports = {
             //         $ref: '#/definitions/Reservation'
             //     }
             // }
-        
 
-        const sendEmail = (require("../helpers/mailer"))
-        const owner = await User.findOne({isOwner: true }, { _id: 0, email: 1, emailPassword:1 })
-        const data = await Reservation.create(req.body)
-        sendEmail(owner.email, "There is a new reservation")
+            const sendEmail = (require("../helpers/mailer"))
+            const owner = await User.findOne({isOwner: true }, { _id: 0, email: 1, emailPassword:1 })
+            const data = await Reservation.create(req.body)
+            sendEmail(owner.email, "There is a new reservation")
 
         res.status(201).send({
-            error:false,
+            error: false,
             data
         })
     },
-    read: async(req, res)=>{
 
-        /*
+    read: async (req, res) => {
+/*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "Get Single REservation"
         */
 
-        const data = await Reservation.findOne({_id:req.params.id
-        })
-        res.status(200).send({
-            error:false,
-            data
-        })
+     
+            const data = await Reservation.findOne({_id:req.params.id
+            })
+            res.status(200).send({
+                error:false,
+                data
+            })
 
     },
-    update: async(req, res)=>{
 
-             /*
+    update: async (req, res) => {
+         /*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "Update Reservation"
             #swagger.parameters['body'] = {
@@ -80,40 +77,38 @@ module.exports = {
             }
         */
 
-        const data = await Reservation.updateOne({_id:req.params.id}, req.body)
-        const currentData = await Reservation.findOne({_id:req.params.id})
-        const sendEmail = (require("../helpers/mailer"))
-       
-
-       if(req.body.accepted)  {
-        sendEmail(currentData.guestEmail, "Your reservation has been confirmed")
-       }
-        else if (req.body.accepted==false) {
-            sendEmail(currentData.guestEmail, "Your reservation has been rejected")
-        }
-       
-        res.status(202).send({
-            error:false,
-            data,
-            newData: await Reservation.findOne({_id:req.params.id})
-        })
+            const data = await Reservation.updateOne({_id:req.params.id}, req.body)
+            const currentData = await Reservation.findOne({_id:req.params.id})
+            const sendEmail = (require("../helpers/mailer"))
+           
+    
+           if(req.body.accepted)  {
+            sendEmail(currentData.guestEmail, "Your reservation has been confirmed")
+           }
+            else if (req.body.accepted==false) {
+                sendEmail(currentData.guestEmail, "Your reservation has been rejected")
+            }
+           
+            res.status(202).send({
+                error:false,
+                data,
+                newData: await Reservation.findOne({_id:req.params.id})
+            })
 
     },
-    delete: async(req, res)=>{
 
-        /*
+    delete: async (req, res) => {
+     /*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "Delete Reservation"
         */
 
-        const data = await Reservation.deleteOne({_id:req.params.id})
+            const data = await Reservation.deleteOne({_id:req.params.id})
 
-        res.status(data.deletedCount ? 204 : 404).send({
-            error: !data.deletedCount,
-            data
-        })
-
+            res.status(data.deletedCount ? 204 : 404).send({
+                error: !data.deletedCount,
+                data
+            })
 
     },
-
 }
